--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -205,9 +205,59 @@
         <!--Header-->
         <div class="col-lg-12">
           <h2 class="text-center">Portfolio.</h2>
+          <p class="text-justify">
+            This is my entire online portfolio.
+            It has everything that i've basically done,
+            my whole life!
+            This does include volunteering,
+            work experience,
+            and everything development based!
+            This will be updated as my life progresses!
+          </p>
         </div>
 
-      </div>
+        <!--Volunteering/JS Heading-->
+        <div class="col-lg-12">
+         <h3 class="text-center">Experience Related.</h3>
+        </div>
+
+        <!--Left Side Job Shadow-->
+        <div class="col-lg-3">
+          <h4 class="text-center">Job Shadow(s).</h4>
+
+          <!--Garmin-->
+          <p class="text-justify ml-4">Garmin Ltd.</p>
+          <button class="btn btn-dark ml-4" type="button" data-toggle="collapse" data-target="#garmin" aria-expanded="false" aria-controls="collapseExample">
+            About.
+          </button>
+          <div class="collapse" id="garmin">
+            <div class="card card-body">
+              April 27, 2018 <br>
+              On this day,
+              I had the exciting opportunity
+              to visit the Garmin facility in Salem,
+              Oregon. <br>
+              The job shadow was on Software Engineering,
+              and the responsibilities that they have, work flow,
+              and anything that has to do with Software Engineering.
+              While I wish to become a Software/Web Developer,
+              it's great (in my opinion) to look at similar positions,
+              to see if there are better alternatives.
+              Long story, I don't wish to become a Software Engineer,
+              but I learned a lot from low level engineering in Assembly/C. 
+            </div>
+          </div>
+        </div><!--Master Column-->
+
+
+        <!--Right Side Volunteering-->
+        <div class="col-lg-9">
+          <h4 class="text-center">Volunteering Experience.</h4>
+          <p class="text-secondary text-center">
+            Total Hours Volunteered - 6
+          </p>
+        </div><!--Master Column-->
+      </div><!--Global Settings-->
     </div>
   </section>
 
