--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -194,7 +194,13 @@
           </a>
         </p>
       </div>
+
+      <!--Line-->
+      <div class="col-lg-12">
+        <hr>
+      </div>
     </div>
+  </div>
   </section>
 
   <!--Portfolio-->
@@ -218,7 +224,7 @@
 
         <!--Volunteering/JS Heading-->
         <div class="col-lg-12">
-         <h3 class="text-center">Experience Related.</h3>
+         <h4 class="text-center">Experience Related.</h4>
         </div>
 
         <!--Left Side Job Shadow-->
@@ -226,8 +232,8 @@
           <h4 class="text-center">Job Shadow(s).</h4>
 
           <!--Garmin-->
-          <p class="text-justify ml-4">Garmin Ltd.</p>
-          <button class="btn btn-dark ml-4" type="button" data-toggle="collapse" data-target="#garmin" aria-expanded="false" aria-controls="collapseExample">
+          <p class="text-justify">Garmin Ltd.</p>
+          <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#garmin" aria-expanded="false" aria-controls="collapseExample">
             About.
           </button>
           <div class="collapse" id="garmin">
@@ -256,7 +262,67 @@
           <p class="text-secondary text-center">
             Total Hours Volunteered - 6
           </p>
+
+          <!--Accordion wrapper-->
+          <div class="accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+            <!-- Accordion card -->
+            <div class="card">
+
+              <!-- Card header -->
+                <div class="card-header" role="tab" id="headingOne">
+                  <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <h5 class="mb-0">
+                    Stamp Out Food Hunger. - 3<i class="fa fa-angle-down rotate-icon"></i>
+                  </h5>
+                  </a>
+                </div>
+
+                <!-- Card body -->
+                <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordionEx">
+                  <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
+                  3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
+                  shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
+                  sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                  farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
+                  accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+
+            <!-- Accordion card -->
+            <div class="card">
+
+              <!-- Card header -->
+              <div class="card-header" role="tab" id="headingTwo">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <h5 class="mb-0">
+                  Website Redesign. - 3<i class="fa fa-angle-down rotate-icon"></i>
+                </h5>
+                </a>
+              </div>
+
+              <!-- Card body -->
+              <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordionEx">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
+                  3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
+                  shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
+                  sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                  farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
+                  accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+            </div>
         </div><!--Master Column-->
+        
+        <!--Line-->
+        <div class="col-lg-12">
+          <hr>
+        </div>
       </div><!--Global Settings-->
     </div>
   </section>
@@ -291,7 +357,6 @@
             and more people are using phones
             than ever!
           </p>
-          <hr>
         </div>
 
         <!--Basic-->
@@ -344,7 +409,6 @@
               deadlines, and communication between
               client and developer. 
             </p>
-            <hr>
           </div><!--Container Settings-->
         </div>
 
@@ -401,7 +465,6 @@
               if a renewal contact for Future Development
               is reached.
             </p>
-            <hr>
           </div><!--Container Settings-->
         </div>
 
@@ -461,8 +524,12 @@
               <b>$349</b>
               for continued projects.
             </p>
-            <hr>
           </div><!--Container Settings-->
+        </div>
+        
+        <!--Line-->
+        <div class="col-lg-12">
+          <hr>
         </div>
       </div><!--Global Settings-->
     </div>
@@ -545,6 +612,14 @@
         frmvalidator.addValidation("email","req","Please provide your email"); 
         frmvalidator.addValidation("email","email","Please enter a valid email address"); 
     </script>
+
+    <!--Line-->
+    <div class="col-lg-12">
+      <hr>
+    </div>
+    </div>
+    </div>
+    </div>
   </section>
 
   <!--Donate-->
