--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -222,11 +222,6 @@
           </p>
         </div>
 
-        <!--Volunteering/JS Heading-->
-        <div class="col-lg-12">
-         <h4 class="text-center">Experience Related.</h4>
-        </div>
-
         <!--Left Side Job Shadow-->
         <div class="col-lg-3">
           <h4 class="text-center">Job Shadow(s).</h4>
@@ -271,7 +266,7 @@
               <!-- Card header -->
                 <div class="card-header" role="tab" id="headingOne">
                   <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  <h5 class="mb-0">
+                  <h5 class="mb-1">
                     Stamp Out Food Hunger. - 3<i class="fa fa-angle-down rotate-icon"></i>
                   </h5>
                   </a>
@@ -280,13 +275,18 @@
                 <!-- Card body -->
                 <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordionEx">
                   <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
-                  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
-                  3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-                  shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                  sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                  farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
-                  accusamus labore sustainable VHS.
+                      On May 12 2018, <br>
+                      there was a food drive event that was going on.
+                      The purpose of that food drive was to help families who could not afford food, have some.
+                      I decided to grab some friends and help out. At the food drive, there were two stations.
+                      Station one was unpacking and safety team.
+                      This team was responsible for taking out food that was collected from the bags,
+                      and making sure that they were not expired. Then there was our group.
+                      Our group was responsible for placing the items in the correct categories
+                      e.g - Soups, Vegetables, Fruits, Deserts etc. <br>
+                      <p class="text-secondary">
+                        Hours Volunteered - 3
+                      </p>
                 </div>
               </div>
             </div>
@@ -297,7 +297,7 @@
               <!-- Card header -->
               <div class="card-header" role="tab" id="headingTwo">
                 <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                <h5 class="mb-0">
+                <h5 class="mb-1">
                   Website Redesign. - 3<i class="fa fa-angle-down rotate-icon"></i>
                 </h5>
                 </a>
@@ -306,13 +306,18 @@
               <!-- Card body -->
               <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordionEx">
                 <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
-                  non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
-                  3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-                  shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt
-                  sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                  farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
-                  accusamus labore sustainable VHS.
+                    Between the days, June 15/16, <br>
+                    I was offered the opportunity to re-develop a website.
+                    This website was a personal website, yet needed some assistance making the page more modern.
+                    Since I did not have anything else on my agenda for the provided days,
+                    I offered to redo the website.
+                    This website was all made in Bootstrap V4 with no other assistance provided. <br>
+                    <a href="http://spraguehs.com/vohland_andrew/">
+                    If you want to see the live, modified product (as owner modified for his taste) click here!
+                    </a>
+                    <p class="text-secondary">
+                      Hours Volunteered - 3
+                    </p>
                 </div>
               </div>
             </div>
