--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -224,7 +224,7 @@
 
         <!--Left Side Job Shadow-->
         <div class="col-lg-3">
-          <h4 class="text-center">Job Shadow(s).</h4>
+          <h4>Job Shadow(s).</h4>
 
           <!--Garmin-->
           <p class="text-justify">Garmin Ltd.</p>
@@ -541,7 +541,7 @@
   </section>
 
   <!--Contact Section-->
-  <section id="contact" class="content-section text-center">
+  <section id="contact">
     <div class="container">
       <div class="row">
           
@@ -561,7 +561,7 @@
         </div>
 
         <!--Icons-->
-        <div class="col-lg-12">
+        <div class="col-lg-12 text-center">
         <div class="col-lg-12 mx-auto">
           <ul class="list-inline banner-social-buttons">
             <li class="list-inline-item">
