Very Minor Stuff.

--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -223,7 +223,7 @@
         </div>
 
         <!--Left Side Job Shadow-->
-        <div class="col-lg-3">
+        <div class="col-lg-3 mb-5">
           <h4>Job Shadow(s).</h4>
 
           <!--Garmin-->
@@ -253,7 +253,7 @@
 
         <!--Right Side Volunteering-->
         <div class="col-lg-9">
-          <h4 class="text-center">Volunteering Experience.</h4>
+          <h4 class="text-center">Volunteering/Work Experience.</h4>
           <p class="text-secondary text-center">
             Total Hours Volunteered - 6
           </p>
@@ -316,19 +316,84 @@
                     If you want to see the live, modified product (as owner modified for his taste) click here!
                     </a>
                     <p class="text-secondary">
-                      Hours Volunteered - 3
+                      Hours Volunteered - 6 <br>
+                      Worked At - Coria Estates/Berry Smooth. <br>
+                      Websites Made - 2 <br>
                     </p>
                 </div>
               </div>
             </div>
             </div>
-        </div><!--Master Column-->
-        
+
+             <!-- Accordion card -->
+             <div class="card">
+
+                <!-- Card header -->
+                <div class="card-header" role="tab" id="headingThree">
+                  <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+                  <h5 class="mb-1">
+                    Coria Estates<i class="fa fa-angle-down rotate-icon"></i>
+                  </h5>
+                  </a>
+                </div>
+  
+                <!-- Card body -->
+                <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordionEx">
+                  <div class="card-body">
+                    Coria Estates: June 2017 - August 2017. <br>
+                    I worked as a field worker,
+                    doing various tasks,
+                    to make sure that production/picking 
+                    of the produce (grapes) went smoothly.
+                    We accomplished this by moving the branches
+                    of the plant,
+                    pulling out the leaves at the appropriate time
+                    and more! <br>
+                    I was forced to exit the job,
+                    as school was approaching and I only focus on
+                    school during the school year.
+                  </div>
+                </div>
+              </div>
+
+                           <!-- Accordion card -->
+             <div class="card">
+
+                <!-- Card header -->
+                <div class="card-header" role="tab" id="headingFour">
+                  <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  <h5 class="mb-1">
+                    Berry Smooth<i class="fa fa-angle-down rotate-icon"></i>
+                  </h5>
+                  </a>
+                </div>
+  
+                <!-- Card body -->
+                <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordionEx">
+                  <div class="card-body">
+                    Berry Smooth: July 2018 - Current. <br>
+                    As a position I couldn't really tell you,
+                    since I kinda do a little bit of everything. 
+                    I make smoothies,
+                    i'm a cashier,
+                    and I clean/stock up supplies.
+                    Since it's currently summer,
+                    i'm working for a smoothie shop that sells
+                    well... Smoothies.
+                    I also made the website, so if you want to check it out
+                    <a href="https://667001.000webhostapp.com/">
+                    you can click on this line!
+                    </a>
+                  </div>
+                </div>
+              </div>
+              </div>
+      
         <!--Line-->
         <div class="col-lg-12">
           <hr>
         </div>
-      </div><!--Global Settings-->
+      </div>
     </div>
   </section>
 
