--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -255,7 +255,9 @@
         <div class="col-lg-9">
           <h4 class="text-center">Volunteering/Work Experience.</h4>
           <p class="text-secondary text-center">
-            Total Hours Volunteered - 6
+            Total Hours Volunteered - 6 <br>
+            Total Jobs Had - 2 <br>
+            Total Websites Made - 2 <br>
           </p>
 
           <!--Accordion wrapper-->
@@ -316,9 +318,7 @@
                     If you want to see the live, modified product (as owner modified for his taste) click here!
                     </a>
                     <p class="text-secondary">
-                      Hours Volunteered - 6 <br>
-                      Worked At - Coria Estates/Berry Smooth. <br>
-                      Websites Made - 2 <br>
+                      Hours Volunteered - 3
                     </p>
                 </div>
               </div>
@@ -386,7 +386,38 @@
                     </a>
                   </div>
                 </div>
-              </div>
+
+                <div class="card">
+
+                    <!-- Card header -->
+                    <div class="card-header" role="tab" id="headingFive">
+                      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                      <h5 class="mb-1">
+                        D&H<i class="fa fa-angle-down rotate-icon"></i>
+                      </h5>
+                      </a>
+                    </div>
+      
+                    <!-- Card body -->
+                    <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordionEx">
+                      <div class="card-body">
+                        D & H: June 2018. <br>
+                        My position here was a Web Developer.
+                        I was given this job by a friend,
+                        who knew somebody who wanted a website.
+                        I agreed,
+                        and I developed the website,
+                        in which he directed.
+                        He gave me a layout,
+                        and color scheme that he wanted for the website,
+                        and I followed it.
+                        If you want to see it, click below! <br>
+                        <a href="http://d-h.000webhostapp.com/">
+                        Final Website.
+                        </a>
+                      </div>
+                    </div>
+              </div><!--End Card-->
               </div>
       
         <!--Line-->
