--- a/Version 4/content/pricing/price.html
+++ b/Version 4/content/pricing/price.html
@@ -36,7 +36,37 @@
         </div>
     </nav>
 
-    
+    <!--Hero-->
+    <div class="container-fluid" id="hero-div">
+        <div class="row">
+            <div class="container">
+                <div class="col-lg-12" id="hero-container">
+                    <h1 id="hero-text">Pricing.</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Pricing Personal-->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+
+                <!--Top-->
+                <div class="col-lg-12 mt-5" id="price-header">
+                    <p id="price-header">Personal.</p>
+                </div>
+
+                <!--Price-->
+                <div class="col-lg-12">
+                    <h2 id="price">$199</h2>
+                    <p id="text-muted">
+                        Billed after completion.
+                    </p>
+                </div>
+            </div><!--Global Settings-->
+        </div>
+    </div>
     
     <!--Bootstrap JQ/CS/Poppy-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
