--- a/Version 4/content/portfolio/portfolio.html
+++ b/Version 4/content/portfolio/portfolio.html
@@ -37,7 +37,7 @@
     
                     <!--To Pricing Section-->
                     <li class="nav-item">
-                        <a class="nav-link" href="../pricing/price.css">Pricing</a>
+                        <a class="nav-link" href="../pricing/price.html">Pricing</a>
                     </li>
     
                     <!--To Contact Section-->
