--- a/Version 4/index.html
+++ b/Version 4/index.html
@@ -45,7 +45,7 @@
 
           <!--To Pricing Section-->
           <li class="nav-item">
-            <a class="nav-link" href="content/pricing/price.css">Pricing</a>
+            <a class="nav-link" href="content/pricing/price.html">Pricing</a>
           </li>
 
           <!--To Contact Section-->
