--- a/Version 4/index.html
+++ b/Version 4/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="An aspiring Web Developer, looking to build a modern future!">
+    <meta name="author" content="Brayan Quevedo Ramos">
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Brayan Quevedo Ramos</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">Brayan Quevedo Ramos.</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile/profile-picture-1.jpg" alt="Profile Picture">
         </span>
@@ -258,11 +258,90 @@
               <h2 class="text-center">
                 Personal.
               </h2>
+              <h2 id="askprice">
+                $129
+              </h2>
+              <p class="text-muted text-center">
+                Billed Once Complete.
+              </p>
+              <hr>
+              <h3 class="text-center">
+                About This Plan.
+              </h3>
+              <p>
+                This is a perfect plan for anyone who just
+                needs a web presence.
+                You'll get a 1-3 page webpage,
+                with color schemes of your choosing!
+                Although development may not be my #1 priority,
+                you shall receive the completed website (with anything requested),
+                within 2 weeks from the date of agreement.
+              </p>
+              <hr>
+              <h3 class="text-center">
+                Hosting.
+              </h3>
+              <p class="lead text-center">
+                $0 - Self Hosting. <br>
+                $0 - Webhost. <br>
+                $2.99 - Awardspace. <br>
+                <b>WON'T BUY CUSTOM DOMAINS</b>
+              </p>
+              <hr>
+              <h3 class="text-center">
+                Future Development.
+              </h3>
+              <p>
+                Future development is
+                <i>not available.</i> <br>
+                Any minor changes (like moving divs and such)
+                are free.
+              </p>
             </div>
             <div class="col-lg-6">
               <h2 class="text-center">
                 Company.
               </h2>
+              <h2 id="askprice">
+                $259
+              </h2>
+              <p class="text-muted text-center">
+                Billed Once Complete.
+              </p>
+              <hr>
+              <h3 class="text-center">
+                About This Plan.
+              </h3>
+              <p>
+                This is an all around amazing plan for all of your 
+                business needs!
+                With the provided plan above,
+                you get my 100% attention if anything occurs,
+                1-10 web pages,
+                with color scheme and anything requested.
+                The website should be delivered ASAP,
+                which can range from 1-5 Business days,
+                depending on requested info. 
+              </p>
+              <hr>
+              <h3 class="text-center">
+                Hosting.
+              </h3>
+              <p class="lead text-center">
+                $0 - Self Hosting. <br>
+                $0 - Webhost. <br>
+                $2.99 - Awardspace. <br>
+                <b>WON'T BUY CUSTOM DOMAINS</b>
+              </p>
+              <hr>
+              <h3 class="text-center">
+                Future Development.
+              </h3>
+              <p>
+                Future development is available for $99. <br>
+                Anything minor (like moving divs and such)
+                is free.
+              </p>
             </div>
           </div>
         </div>
@@ -278,7 +357,7 @@
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for this template -->
+    <!-- Custom scripts-->
     <script src="js/resume.min.js"></script>
 
   </body>
