--- a/Version 4/index.html
+++ b/Version 4/index.html
@@ -163,6 +163,32 @@
               <span class="text-primary">May 2018 - July 2018</span>
             </div>
           </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Web Developer</h3>
+              <div class="subheading mb-3">AccessoryWcs</div>
+              <p>
+                This is a website created for a business.
+                The business was about repairing and educating phone users.
+                The goals that were presented in making the website were as followed;
+                Make a clean website, add only relevant information,
+                and make it mobile friendly (with Twitter Bootstrap). <br>
+                <a href="http://accessorywcs.000webhostapp.com/">
+                The finished product can be viewed here.</a>
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2018</span>
+            </div>
+          </div>
+          <h2 class="mb-5">
+            Non Web Development Experience.
+          </h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Cashier</h3>
+            </div>
+          </div>
         </div>
       </section>
 
