Added more to resume

--- a/Version 4/index.html
+++ b/Version 4/index.html
@@ -121,7 +121,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
+              <h3 class="mb-0">Senior Web Developer.</h3>
               <div class="subheading mb-3">Berry Smooth</div>
               <p>
                 I was a Senior Software Developer for a startup named
@@ -144,7 +144,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
+              <h3 class="mb-0">Web Developer.</h3>
               <div class="subheading mb-3">D&H</div>
               <p>
                 A client approached me one day and requested a specific website for an established company.
@@ -165,7 +165,7 @@
           </div>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
+              <h3 class="mb-0">Web Developer.</h3>
               <div class="subheading mb-3">AccessoryWcs</div>
               <p>
                 This is a website created for a business.
@@ -186,7 +186,47 @@
           </h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Cashier</h3>
+              <h3 class="mb-0">Cashier.</h3>
+              <div class="subheading mb-3">Berry Smooth</div>
+              <p>
+                If you don't know what a cashier is,
+                it's a position in which I take orders and handle the money.
+                That would be about it in most companies,
+                but at Berry Smooth, I decided to take it one step further!
+                Of course, I didn't have to,
+                but who likes just standing there, watching 
+                their co-workers struggle making orders?
+                I didn't, so
+                whenever possible, I took orders, made the orders,
+                <b>AND</b>
+                washed the dishes! 
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2018 - Current </span>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Field Worker.</h3>
+              <div class="subheading mb-3">Coria Estates</div>
+              <p>
+                I've always wanted to know how agriculture was like.
+                I always pass by fields on my way to somewhere,
+                and when I saw grapes on sale at a local store,
+                I wanted to know how the process worked like.
+                Well, last summer I did work in agriculture!
+                I raised wire,
+                raised the vines,
+                cut/trim,
+                and pick the grapes!
+                I never liked working there,
+                but it was a learning experience for me.
+                The lesson taught there was that if I don't want to finish high school,
+                or do anything in life, i'd end up here.
+                This job has been my motivation to pursue Software/Web Development
+                since I don't want to end up like this! 
+              </p>
             </div>
           </div>
         </div>
